@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 17-05-2005 changed: getting album info can be canceled now
  - 17-05-2005 fixed: [1199792] 2 seconds chopped off each track
  - 17-05-2005 fixed: play button does not revert to normal playback speed when seeking
  - 16-05-2005 fixed: SF Patch [1203229] Resume Video in My Videos context menu, thanks to deadken
